# hugr-lightr

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md
crates/lightr-acceptance/: Cargo.toml
crates/lightr-acceptance/src/: lib.rs
crates/lightr-acceptance/tests/: acceptance.rs  acceptance_net.rs  acceptance_r1.rs  acceptance_r2.rs  acceptance_r3.rs  acceptance_r4.rs  image_verbs.rs
crates/lightr-acceptance/tests/acceptance/: group1.rs  group2.rs  helpers.rs
crates/lightr-acceptance/tests/acceptance_r1/: g1.rs  g2.rs  g3.rs  g4.rs  g5.rs  g6.rs  helpers.rs
crates/lightr-acceptance/tests/acceptance_r2/: group_a17.rs  group_a18_a19_a20.rs  group_a21_a22.rs  helpers.rs
crates/lightr-acceptance/tests/acceptance_r3/: group_a22_a23.rs  group_a24.rs  group_a25.rs  group_a26_a308.rs  helpers.rs
crates/lightr-acceptance/tests/acceptance_r4/: a27_a28.rs  a29_a30.rs  helpers.rs
crates/lightr-acceptance/tests/common/: mod.rs
crates/lightr-build/: Cargo.toml
crates/lightr-build/src/: lib.rs
crates/lightr-cli/: Cargo.toml  build.rs
crates/lightr-cli/src/: exit.rs  main.rs
crates/lightr-cli/src/cli/: cmd.rs  dispatch.rs  mod.rs  version.rs
crates/lightr-cli/src/cli/cmd/: mod.rs  run_args.rs  subcommands.rs
crates/lightr-cli/src/handlers/: attach.rs  bench.rs  bench_compare.rs  bench_compete_docker.rs  bisect.rs  build.rs  commit.rs  commit_tests.rs  compose.rs  compose_tests.rs  container.rs  cp.rs  cp_tests.rs  create.rs  diff.rs  docker.rs  engine.rs  exec.rs  gc.rs  history.rs  history_tests.rs  hydrate.rs  images.rs  images_tests.rs  info.rs  info_tests.rs  inspect.rs  inspect_tests.rs  kill.rs  logs.rs  logs_tests.rs  mcp.rs  mod.rs  network.rs  network_tests.rs  oci.rs  oci_imageops.rs  oci_tests.rs  pause.rs  plan.rs  (+33 more)
crates/lightr-cli/src/handlers/bench/: fixture.rs  measure.rs  mod.rs  tests.rs
crates/lightr-cli/src/handlers/bench_compare/: competitor.rs  measure.rs  mod.rs  model.rs  report.rs
crates/lightr-cli/src/handlers/bench_compete_docker/: mod.rs  probes.rs  tests.rs
crates/lightr-cli/src/handlers/docker/: compose.rs  flag_err.rs  mod.rs  run_args.rs  run_args_tests.rs  tests.rs
crates/lightr-cli/src/handlers/mcp/: mod.rs  tests.rs  tools.rs
crates/lightr-cli/src/handlers/run/: env.rs  env_tests.rs  flags.rs  flags_publish.rs  flags_publish_tests.rs  flags_rc_tests.rs  helpers.rs  mod.rs  parse.rs  paths.rs  paths_engine.rs  paths_imgcfg_tests.rs  paths_native_memo.rs  paths_vz.rs  policy.rs  runflags.rs  runflags_tests.rs  tests.rs  tests_health.rs  tests_net.rs  tests_runflags.rs
crates/lightr-cli/src/handlers/schema/: mod.rs  tests.rs
crates/lightr-cli/src/tests/: g1.rs  g2.rs  g3.rs  g4.rs  mod.rs  net3.rs
crates/lightr-core/: Cargo.toml
crates/lightr-core/src/: lib.rs
crates/lightr-core/src/core/: consts.rs  digest.rs  error.rs  limits.rs  manifest.rs  mod.rs  refrecord.rs  tests.rs
crates/lightr-cri-backend/: Cargo.toml
crates/lightr-cri-backend/src/: container.rs  container_query.rs  container_setup.rs  container_start.rs  container_wait.rs  exec.rs  images.rs  lib.rs  lib_tests.rs  ns_exec.rs  ns_run.rs  sandbox.rs  sandbox_net.rs  sandbox_net_tests.rs  sandbox_tests.rs  stats.rs  stream.rs  stream_io.rs  stream_tests.rs  util.rs  vocab.rs
crates/lightr-cri-backend/tests/: netns_lifecycle.rs  vectors.rs  wired.rs
crates/lightr-cri-backend/tests/vectors/: data.rs  data_a.rs  data_b.rs  runner.rs  runner2.rs  step.rs
crates/lightr-cri-serve/: .gitignore  Cargo.toml
crates/lightr-cri-serve/src/: adapter.rs  convert.rs  main.rs  ns_exec_shim.rs  ns_shim.rs
crates/lightr-engine/: Cargo.toml  build.rs
crates/lightr-engine/examples/: assemble-pack.rs
crates/lightr-engine/shim/: vz.swift
crates/lightr-engine/src/: lib.rs  limits.rs  pack.rs  pathres.rs  vsock.rs
crates/lightr-engine/src/engine/: envuser.rs  envuser_tests.rs  kind.rs  mod.rs  native.rs  ns.rs  probe.rs  seccomp.rs  seccomp_default.json  spec.rs  subid.rs  vz.rs  wsl.rs
crates/lightr-engine/src/pack/: cpio.rs  mod.rs  tests.rs
crates/lightr-index/: Cargo.toml
crates/lightr-index/src/: lib.rs
crates/lightr-index/src/index/: codec.rs  gc.rs  hydrate.rs  mod.rs  scan.rs  snapshot.rs  status.rs  timeaxis.rs
crates/lightr-init/: Cargo.toml
crates/lightr-init/src/: lib.rs  tests.rs
crates/lightr-oci/: Cargo.toml
crates/lightr-oci/src/: lib.rs
crates/lightr-oci/src/oci/: history.rs  http.rs  images.rs  import.rs  layer.rs  load.rs  mod.rs  model.rs  pull.rs  push.rs  reference.rs  retain.rs  rmi.rs  rmi_tests.rs  save.rs  util.rs
crates/lightr-run/: Cargo.toml
crates/lightr-run/examples/: c9-xproc-switch.rs  s5-vz-switch.rs  s6-xproc-switch.rs
crates/lightr-run/src/: healthcheck.rs  healthcheck_tests.rs  lib.rs  limits.rs  network.rs  portforward.rs  portforward_tests.rs  restart.rs  secrets.rs
crates/lightr-run/src/network/: alloc.rs  fsutil.rs  mod.rs  registry.rs  tests.rs  types.rs
crates/lightr-run/src/restart/: mod.rs  tests.rs
crates/lightr-run/src/run/: ac.rs  apply_cfg.rs  apply_cfg_tests.rs  bindmat.rs  bindmat_tests.rs  ctl.rs  deepmemo.rs  exec.rs  lifecycle.rs  lifecycle_tests.rs  logs.rs  memo.rs  memo_key.rs  mod.rs  mount.rs  paths.rs  ps.rs  registry.rs  respawn.rs  respawn_tests.rs  spawn.rs  specdisk.rs  stop.rs  supervise.rs  supervise_native.rs  supervise_native_setup.rs  supervise_native_tests.rs  supervise_win.rs  svz.rs  types.rs  vzmemo.rs
crates/lightr-run/src/vswitch/: dhcp.rs  dns.rs  mod.rs  mod_tests.rs  passfd.rs  passfd_tests.rs  switch.rs  switch_host.rs  switch_host_tests.rs
crates/lightr-store/: Cargo.toml
crates/lightr-store/src/: lib.rs
crates/lightr-store/src/store/: ac.rs  cas.rs  cow.rs  imgmeta.rs  imgmeta_codec.rs  imgmeta_tests.rs  lock.rs  mod.rs  refs.rs  refs_tests.rs  usage.rs  usage_tests.rs  volume.rs  volume_tests.rs
crates/lightr-views/: Cargo.toml
crates/lightr-views/src/: lib.rs
crates/lightr-views/src/views/: backend.rs  composefs.rs  mod.rs  nfsloopback.rs  plan.rs  projfs.rs  tests.rs
(+161 files in other folders)
