[workspace]
resolver = "2"
members = [
    "crates/lightr-core",
    "crates/lightr-cri-backend",
    "crates/lightr-store",
    "crates/lightr-index",
    "crates/lightr-run",
    "crates/lightr-cli",
    "crates/lightr-acceptance",
    "crates/lightr-engine",
    "crates/lightr-oci",
    "crates/lightr-build",
    "crates/lightr-init",
    "crates/lightr-views",
]
# OPT-IN, OUT-OF-DEFAULT-BUILD: the CRI composition root (`lightr cri serve`)
# is the ONLY crate that depends on the sibling `lightr-cri` shell (tonic/gRPC).
# Excluding it keeps `cargo build [--workspace]` decoupled from that sibling and
# upholds the dependency firewall (ADR-0017 decision 5). Build it explicitly:
#   cargo build --manifest-path crates/lightr-cri-serve/Cargo.toml
exclude = ["crates/lightr-cri-serve"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/HumanGuardrail/hugr-lightr"
homepage = "https://github.com/HumanGuardrail/hugr-lightr"
readme = "README.md"
# publish stays false: ADR-0008 lifted the LICENSE gate (Apache-2.0), but
# pushing to crates.io is a separate GTM decision (whitepaper §9.8: launch
# after Runners M1). Flip to true when that timing call is made.
publish = false

[workspace.dependencies]
blake3 = { version = "1", features = ["rayon", "mmap"] }
rayon = "1"
ignore = "0.4"
libc = "0.2"
memmap2 = "0.9"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
indexmap = { version = "2", features = ["serde"] }
tempfile = "3"
assert_cmd = "2"
ureq = { version = "2", default-features = false, features = ["tls", "gzip"] }
flate2 = "1"
tar = "0.4"
sha2 = "0.10"
# Windows FFI — declared here, consumed per-crate under
# [target.'cfg(windows)'.dependencies] windows-sys.workspace = true (so it is
# NEVER pulled on unix builds). Added for the omni cross-platform wave
# (docs/spec/build-spec-omni.md): LockFileEx/UnlockFileEx, FlushFileBuffers,
# named pipes, FSCTL block-clone, OpenProcess/TerminateProcess.
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Ioctl",
    "Win32_System_Pipes",
    "Win32_System_Threading",
] }
lightr-core = { path = "crates/lightr-core" }
lightr-store = { path = "crates/lightr-store" }
lightr-index = { path = "crates/lightr-index" }
lightr-init = { path = "crates/lightr-init" }
lightr-run = { path = "crates/lightr-run" }
lightr-oci = { path = "crates/lightr-oci" }
lightr-engine = { path = "crates/lightr-engine" }
lightr-build = { path = "crates/lightr-build" }
lightr-views = { path = "crates/lightr-views" }

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
