[package]
name = "lightr-acceptance"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]

[dev-dependencies]
assert_cmd = { workspace = true }
tempfile = { workspace = true }
serde_json = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }
