[package]
name = "lightr-acceptance"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false # internal: not published
description = "Acceptance test harness (A1-A8) for the Lightr daemonless runtime."
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords = ["container", "runtime", "daemonless"]
categories = ["development-tools"]

[dependencies]

[dev-dependencies]
assert_cmd = { workspace = true }
tempfile = { workspace = true }
serde_json = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }
sha2 = { workspace = true }
