[package]
name = "lightr-build"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Step-memoized Dockerfile build graph and lazy compose for Lightr."
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords = ["container", "build-cache", "oci", "daemonless", "cas"]
categories = ["development-tools::build-utils", "development-tools"]

[dependencies]
lightr-core = { workspace = true }
lightr-store = { workspace = true }
lightr-index = { workspace = true }
lightr-run = { workspace = true }
lightr-oci = { workspace = true }
lightr-engine = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
indexmap = { workspace = true }
blake3 = { workspace = true }
libc = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
