[package]
name = "lightr-build"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Step-memoized Dockerfile build graph and lazy compose for Lightr."
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords = ["container", "build-cache", "oci", "daemonless", "cas"]
categories = ["development-tools::build-utils", "development-tools"]

[dependencies]
lightr-core = { workspace = true }
lightr-store = { workspace = true }
lightr-index = { workspace = true }
lightr-run = { workspace = true }
lightr-oci = { workspace = true }
lightr-engine = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
indexmap = { workspace = true }
blake3 = { workspace = true }
libc = { workspace = true }
# ADD tar auto-extract (WP-DF-07). Both are EXISTING workspace deps (already in
# the lockfile via lightr-oci's docker-save import) — wiring them into this crate
# is `{ workspace = true }`, NOT a new project dependency.
tar = { workspace = true }
flate2 = { workspace = true }
# WP-G: ADD auto-extract of .tar.xz / .tar.bz2. NOT pre-existing in the workspace
# dep table, so pinned directly here (in-scope for WP-G per its charter). Both
# decode in-process via a `Read` adapter mirroring `flate2::read::GzDecoder`:
#   xz2  -> liblzma (lzma-sys vendors the C lib; no system liblzma required)
#   bzip2-> libbz2 (vendored by default; no system libbz2 required)
xz2 = "0.1.7"
bzip2 = "0.6.1"
# WP-G: ADD <url> <dest> fetch. `ureq` is an EXISTING workspace dep (used by
# lightr-oci's registry client + already in the lockfile), wired in as a
# workspace dep — NOT a new project dependency.
ureq = { workspace = true }
# WP-CMP-SECRETS-FULL: staging dir for compose file:-source Store ingestion (up-path, production).
tempfile = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
