[package]
name = "lightr-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Command-line interface for the Lightr daemonless container runtime."
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords = ["container", "runtime", "daemonless", "oci", "workspace"]
categories = ["command-line-utilities", "virtualization"]

[[bin]]
name = "lightr"
path = "src/main.rs"

[dependencies]
lightr-core = { workspace = true }
lightr-store = { workspace = true }
lightr-index = { workspace = true }
lightr-run = { workspace = true }
lightr-oci = { workspace = true }
lightr-engine = { workspace = true }
lightr-build = { workspace = true }
clap = { workspace = true }
# Exact-pinned to versions compatible with the workspace clap 4.x (Cargo.lock:
# clap 4.6.1). clap_complete 4.6.5 needs clap ^4.5.20; clap_mangen 0.3.0 needs
# clap ^4.0.0 — both satisfied. Public-release CLI polish (completions + man).
clap_complete = "=4.6.5"
clap_mangen = "=0.3.0"
serde = { workspace = true }
serde_json = { workspace = true }
tar = { workspace = true }
tempfile = { workspace = true }
