[package]
name = "lightr-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Command-line interface for the Lightr daemonless container runtime."
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords = ["container", "runtime", "daemonless", "oci", "workspace"]
categories = ["command-line-utilities", "virtualization"]

[[bin]]
name = "lightr"
path = "src/main.rs"

[features]
# Build the macOS Virtualization.framework `vz` engine (+ its Swift shim) into the
# CLI. Forwards to lightr-engine's `vz` feature so `cargo build -p lightr-cli
# --features vz` (docs/build.md, docs/RELEASE.md) yields the vz-capable binary.
# Off by default — the daemonless core + native/ns engines need no VM toolchain.
vz = ["lightr-engine/vz"]

[dependencies]
lightr-core = { workspace = true }
lightr-store = { workspace = true }
lightr-index = { workspace = true }
lightr-run = { workspace = true }
lightr-oci = { workspace = true }
lightr-engine = { workspace = true }
lightr-build = { workspace = true }
clap = { workspace = true }
# Exact-pinned to versions compatible with the workspace clap 4.x (Cargo.lock:
# clap 4.6.1). clap_complete 4.6.5 needs clap ^4.5.20; clap_mangen 0.3.0 needs
# clap ^4.0.0 — both satisfied. Public-release CLI polish (completions + man).
clap_complete = "=4.6.5"
clap_mangen = "=0.3.0"
serde = { workspace = true }
serde_json = { workspace = true }
tar = { workspace = true }
tempfile = { workspace = true }
# `libc` is needed on ALL targets: the `--ulimit` parser (handlers/run/parse.rs)
# names `libc::c_int` for the `Ulimit.resource` field (that type lives in
# lightr-engine, which already depends on libc unconditionally), and it is parsed
# cross-platform in the run handler. Separately, WP-CLI-TRIO's `pause`/`unpause`
# source the SIGSTOP/SIGCONT signal numbers from `libc` (their values differ by
# platform — Linux 19/18, macOS 17/19 — so a hardcoded number would be wrong on
# the other unix); that use stays `#[cfg(unix)]`.
libc = { workspace = true }
