[package]
name = "lightr-core"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Core types and contracts for the Lightr daemonless container runtime."
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords = ["container", "runtime", "cas", "content-addressed", "daemonless"]
categories = ["development-tools", "virtualization"]

[dependencies]
blake3 = { workspace = true }
memmap2 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
