[package]
name = "lightr-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Isolation engine backends (native, microVM) for the Lightr runtime."
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords = ["container", "runtime", "sandbox", "microvm", "virtualization"]
categories = ["virtualization", "development-tools"]

[features]
# vz: Virtualization.framework microVM engine (macOS; Swift shim built by
# build.rs in WP R2-W2). Default OFF — the default build stays pure Rust.
vz = []

[dependencies]
lightr-core = { workspace = true }
lightr-store = { workspace = true }
lightr-index = { workspace = true }
lightr-init = { workspace = true }
libc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
