[package]
name = "lightr-index"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
lightr-core = { workspace = true }
lightr-store = { workspace = true }
rayon = { workspace = true }
ignore = { workspace = true }
memmap2 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
