[package]
name = "lightr-init"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

# The guest PID1 binary. The LIBRARY compiles + tests on any host (logic
# behind seams); the BINARY's real syscalls are cfg(target_os="linux").
[[bin]]
name = "lightr-init"
path = "src/bin/init.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

# Real guest PID1 syscalls (mount(2) + AF_VSOCK) live in bin/init.rs behind
# cfg(target_os="linux"); the library + host stub need no libc.
[target.'cfg(target_os = "linux")'.dependencies]
libc = { workspace = true }
