[package]
name = "lightr-oci"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
lightr-core = { workspace = true }
lightr-store = { workspace = true }
lightr-index = { workspace = true }
ureq = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
