[package]
name = "lightr-oci"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "OCI image import bridge: pulls registry layers into the Lightr CAS store."
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords = ["oci", "container", "cas", "content-addressed", "runtime"]
categories = ["development-tools", "virtualization"]

[dependencies]
lightr-core = { workspace = true }
lightr-store = { workspace = true }
lightr-index = { workspace = true }
ureq = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
