[package]
name = "lightr-run"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
blake3 = { workspace = true }
lightr-core = { workspace = true }
lightr-store = { workspace = true }
lightr-index = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
