[package]
name = "lightr-run"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Memo key, native exec, replay, supervisor, and process management for Lightr."
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords = ["container", "runtime", "daemonless", "sandbox", "build-cache"]
categories = ["development-tools", "virtualization"]

[dependencies]
blake3 = { workspace = true }
lightr-core = { workspace = true }
lightr-store = { workspace = true }
lightr-index = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[target.'cfg(windows)'.dependencies]
# Inherit the workspace windows-sys (version + base features) and additively
# enable Win32_Security: in windows-sys 0.59 the CreateFileW / CreateNamedPipeW
# bindings are #[cfg(feature = "Win32_Security")] because their signatures name
# SECURITY_ATTRIBUTES. Feature unification is additive, so this only adds to the
# workspace set and never touches the lead-owned root Cargo.toml.
windows-sys = { workspace = true, features = ["Win32_Security"] }

[dev-dependencies]
tempfile = { workspace = true }
