[package]
name = "lightr-run"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Memo key, native exec, replay, supervisor, and process management for Lightr."
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords = ["container", "runtime", "daemonless", "sandbox", "build-cache"]
categories = ["development-tools", "virtualization"]

[dependencies]
blake3 = { workspace = true }
lightr-core = { workspace = true }
lightr-store = { workspace = true }
lightr-index = { workspace = true }
# WP-NET2: the detached supervisor boots the vz engine for a `-p` Linux-image run
# (engine.run blocks in a thread while the host forwards ports to the guest IP).
# lightr-engine does NOT depend on lightr-run, so this is acyclic; the `vz`
# feature is enabled by the CLI and unified in — lightr-run carries no vz feature
# itself, and a non-vz build's vz branch fails closed via engine_for's probe.
lightr-engine = { workspace = true }
# WP-NET2: the file-channel consts (EXIT_FILE for force-stop, IP_FILE for the
# guest IP) come from lightr-init so the supervisor can never drift from the
# guest PID1's contract. lightr-init is already in the tree (lightr-engine deps
# it); this just makes the dependency explicit.
lightr-init = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[target.'cfg(windows)'.dependencies]
# Inherit the workspace windows-sys (version + base features) and additively
# enable Win32_Security: in windows-sys 0.59 the CreateFileW / CreateNamedPipeW
# bindings are #[cfg(feature = "Win32_Security")] because their signatures name
# SECURITY_ATTRIBUTES. Feature unification is additive, so this only adds to the
# workspace set and never touches the lead-owned root Cargo.toml.
windows-sys = { workspace = true, features = ["Win32_Security"] }

[dev-dependencies]
tempfile = { workspace = true }

[features]
vz = ["lightr-engine/vz"]

# WP-C10: ADR-0018 networking keystone E2E. Boots real alpine microVMs to
# validate the net_mac registry-MAC seam (DHCP/L2/DNS over the VSwitch). Gated
# behind `vz` so the default (no-vz) build never compiles the vz engine path.
[[example]]
name = "s5-vz-switch"
required-features = ["vz"]
