[package]
name = "lightr-store"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
lightr-core = { workspace = true }
libc = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
