[package]
name = "lightr-store"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Content-addressed object store, refs, action cache, and CoW ladder for Lightr."
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords = ["cas", "content-addressed", "build-cache", "container", "runtime"]
categories = ["development-tools", "filesystem"]

[dependencies]
lightr-core = { workspace = true }
libc = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
